# RAG-Implementations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: vbert.ipynb
simple-vision-rag/: .gitignore  README.md
simple-vision-rag/assets/: architecture.excalidraw
simple-vision-rag/celery_worker/: .dockerignore  Dockerfile  pyproject.toml
simple-vision-rag/celery_worker/app/: config.py  qdrant.py  worker.py
simple-vision-rag/embedding_service/: .dockerignore  Dockerfile  pyproject.toml
simple-vision-rag/embedding_service/app/: config.py  dependencies.py  lifespan.py  main.py  router.py  schemas.py  service.py
simple-vision-rag/embedding_service/notebooks/: vbert.ipynb
simple-vision-rag/orchestrator/: pyproject.toml
simple-vision-rag/orchestrator/app/: config.py
simple-vision-rag/orchestrator/app/services/: embedding_service.py  service_mixin.py  vllm_service.py
