[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[all]>=0.118.0",
    "openai>=2.1.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
]
